<resources>
    <string name="app_name">TodoList</string>
    <string name="main_title">Challenge</string>

    <string name="add_todo_title">할 일</string>

    <string name="error_message_title">제목을 입력해주세요.</string>
    <string name="error_message_content">내용을 입력해주세요.</string>
    <string name="error_message_pass" />

    <string name="button_create">등록</string>
    <string name="button_update">수정</string>
    <string name="button_delete">삭제</string>

    <string name="fragment_todo">Todo</string>
    <string name="fragment_bookmark">Bookmark</string>
</resources>